# timelord

./: Cargo.toml  Justfile  README.md
.github/workflows/: build.yml
crates/timelord/: Cargo.toml  README.md
crates/timelord-cli/: Cargo.toml  README.md
crates/timelord-cli/src/: main.rs
crates/timelord/src/: lib.rs  tests.rs
src/: main.rs  tests.rs
