[package]
name = "timelord"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.32", features = ["derive"] }
ignore = "0.4.23"
owo-colors = "4.2.0"
rayon = "1.10.0"
rmp-serde = "1.3.0"
seahash = "4.1.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
