[package]
name = "timelord-cli"
version = "3.0.1"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "A command-line interface for timelord, a Rust tool to preserve file timestamps (mtime) between CI builds"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fasterthanlime/timelord"
keywords = ["timestamp", "mtime", "build", "ci", "cli"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[[bin]]
name = "timelord"
path = "src/main.rs"

[dependencies]
timelord = { path = "../timelord", version = "3.0.0" }
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
