[package]
name = "timelord"
version = "3.0.2"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "A Rust library to preserve file timestamps (mtime) between builds, even with fresh git checkouts"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fasterthanlime/timelord"
keywords = ["timestamp", "mtime", "build", "ci"]
categories = ["development-tools::build-utils", "filesystem"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
camino = { version = "1.1.9", features = ["serde1"] }
hostname = "0.4.0"
human_bytes = "0.4.3"
humantime = "2.2.0"
ignore = "0.4.23"
jiff = "0.2.4"
log = "0.4.26"
owo-colors = "4.2.0"
rayon = "1.10.0"
seahash = "4.1.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11.7"
tempfile = "3.19.1"
